fix(Issuer): improve word wrap break on long names

--- a/src/components/atoms/CertificateDetails/_components.certificate-details.scss
+++ b/src/components/atoms/CertificateDetails/_components.certificate-details.scss
@@ -41,7 +41,7 @@
 
 .buv-c-certificate-details__value {
   margin: 0;
-  word-break: break-all;
+  word-wrap: break-word;
 }
 
 .buv-c-certificate-details__standalone {
